sanitizing and update the error message form also the dahsboard analytics

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -358,25 +358,25 @@ nav {
     color: var(--maincolor) !important;
 }
 .summary-indigo:hover .summary-icon {
-    color: var(--bs-green) !important;
+    color: var(--maincolor) !important;
 }
 .summary-danger:hover .summary-icon {
-    color: var(--bs-danger) !important;
+    color: var(--maincolor) !important;
 }
 .summary-info:hover .summary-icon {
-    color: var(--bs-info) !important;
+    color: var(--maincolor) !important;
 }
 .summary-primary:hover {
     background-color: var(--maincolor) !important;
 }
 .summary-indigo:hover {
-    background-color: var(--bs-green) !important;
+    background-color: var(--maincolor) !important
 }
 .summary-danger:hover {
-    background-color: var(--bs-danger) !important;
+    background-color: var(--maincolor) !important
 }
 .summary-info:hover {
-    background-color: var(--bs-info) !important;
+    background-color: var(--maincolor) !important
 }
 /* end: Suummary */
 /* end: Main */
